--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "remark": "^15.0.1",
     "sonner": "^2.0.4",
     "tailwind-merge": "^3.3.0",
     "vaul": "^1.1.2"
