--- a/package.json
+++ b/package.json
@@ -10,19 +10,27 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.3.1",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.15.0",
     "gray-matter": "^4.0.3",
+    "isomorphic-dompurify": "^2.25.0",
+    "lodash.shuffle": "^4.2.0",
     "lucide-react": "^0.511.0",
+    "micro": "^10.0.1",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
@@ -30,13 +38,16 @@
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "sonner": "^2.0.4",
+    "stripe": "^18.2.1",
     "tailwind-merge": "^3.3.0",
+    "uuid": "^11.1.0",
     "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/lodash.shuffle": "^4.2.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
